// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63055,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63269,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63159,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63736,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63950,
}
`;

exports[`EthRestakeVault - upgrade does not modify the state variables 6`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63840,
}
`;
